# my-kilo-editor

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  edit.cpp  edit.h  editorConfig.h  main.cpp  row.cpp  row.h  syntax.cpp  syntax.h  terminal.h  terminal_base.h  tui.cpp  tui.h
test/: CMakeLists.txt  test_edit.cpp  test_row.cpp  tests.cpp
